// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a "archived" Tag 1`] = `
<div
  className="Tag Tag--negative"
  data-test-id="cf-ui-tag"
>
  Archived
</div>
`;

exports[`renders a "changed" Tag 1`] = `
<div
  className="Tag Tag--primary"
  data-test-id="cf-ui-tag"
>
  Changed
</div>
`;

exports[`renders a "deleted" Tag 1`] = `
<div
  className="Tag Tag--negative"
  data-test-id="cf-ui-tag"
>
  Deleted
</div>
`;

exports[`renders a "draft" Tag 1`] = `
<div
  className="Tag Tag--warning"
  data-test-id="cf-ui-tag"
>
  Draft
</div>
`;

exports[`renders a "muted" Tag 1`] = `
<div
  className="Tag Tag--muted"
  data-test-id="cf-ui-tag"
>
  Tag
</div>
`;

exports[`renders a "negative" Tag 1`] = `
<div
  className="Tag Tag--negative"
  data-test-id="cf-ui-tag"
>
  Tag
</div>
`;

exports[`renders a "positive" Tag 1`] = `
<div
  className="Tag Tag--positive"
  data-test-id="cf-ui-tag"
>
  Tag
</div>
`;

exports[`renders a "primary" Tag 1`] = `
<div
  className="Tag Tag--primary"
  data-test-id="cf-ui-tag"
>
  Tag
</div>
`;

exports[`renders a "published" Tag 1`] = `
<div
  className="Tag Tag--positive"
  data-test-id="cf-ui-tag"
>
  Published
</div>
`;

exports[`renders a "secondary" Tag 1`] = `
<div
  className="Tag Tag--secondary"
  data-test-id="cf-ui-tag"
>
  Tag
</div>
`;

exports[`renders a "warning" Tag 1`] = `
<div
  className="Tag Tag--warning"
  data-test-id="cf-ui-tag"
>
  Tag
</div>
`;

exports[`renders the component 1`] = `
<div
  className="Tag Tag--primary"
  data-test-id="cf-ui-tag"
>
  Tag
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  className="Tag my-extra-class Tag--primary"
  data-test-id="cf-ui-tag"
>
  Tag
</div>
`;
